* In profile in ie6/7 some text/chars can get cropped at bottom. (Profile.css) [Bugs 3382, 3419]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@8323 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/default/css/profile.css
+++ b/Themes/default/css/profile.css
@@ -92,7 +92,7 @@
 	width: 30%;
 	float: left;
 	margin: 0 0 3px 0;
-	padding: 0;
+	padding: 0 0 1px 0;
 	font-weight: bold;
 	clear: both;
 }
@@ -101,7 +101,7 @@
 	width: 70%;
 	float: left;
 	margin: 0 0 3px 0;
-	padding: 0;
+	padding: 0 0 1px 0;
 }
 #detailedinfo div.content dl.noborder
 {
